# open_cl_elixir

./: .gitignore  README.md  mix.exs
config/: config.exs
lib/: open_cl.ex
lib/open_cl/: application.ex  array.ex  buffer.ex  command_queue_opts.ex  command_queue_props.ex  device.ex  device_buffer.ex  dims.ex  kernel_op.ex  mem_config.ex  native.ex  native_struct.ex  nif_not_loaded.ex  number.ex  platform.ex  session.ex  status_code_error.ex  t.ex  tensor.ex  work.ex
native/open_cl_native/: Cargo.toml  README.md
native/open_cl_native/src/: atoms.rs  lib.rs  macros.rs  nif.rs  number.rs  traits.rs  type_id.rs
native/open_cl_native/src/ex/: array_ex.rs  buffer_ex.rs  command_queue_ex.rs  command_queue_props_ex.rs  context_ex.rs  convert.rs  device_buffer_ex.rs  device_ex.rs  dims_ex.rs  error_ex.rs  kernel_ex.rs  mem_config_ex.rs  mod.rs  num_list.rs  num_list_ex.rs  num_type_ex.rs  number_ex.rs  number_list_ex.rs  platform_ex.rs  program_ex.rs  session_ex.rs  status_code_error_ex.rs  tensor_ex.rs  wrapper_ex.rs
native/open_cl_native/src/number/: mod.rs  mut_slice_t.rs  number_type.rs  slice_t.rs  vec_t.rs
test/: open_cl_test.exs
test/open_cl/: array_test.exs  buffer_test.exs  bug_regression_test.exs  session_test.exs
test/support/: array_helpers.ex  profiling_helpers.ex  repeat.ex  sessions_case.ex  source_helpers.ex  testing_context.ex
