[package]
name = "open_cl_native"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "open_cl_native"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = { git = "https://github.com/elbow-jason/rustler", branch = "add-return-term-to-error" }
opencl-core = {git = "https://github.com/elbow-jason/open_cl_rust", rev = "77f2c26"}
serde_rustler = "0.0.3"
failure = "0.1.6"
paste = "0.1.6"
ndarray = "0.13.0"
libc = "0.2.65"

num = "0.2.0"
num-complex = "0.2.3"
num-traits = "0.2.10"
byteorder = "1.3.2"

env_logger = "0.7"
log = "0.4"
